--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "normalize.css": "^8.0.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-hook-form": "^7.0.7",
     "react-redux": "^7.2.3",
     "styled-components": "^5.2.3"
   },
